core-bind9/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bind9
  labels:
    linkerd.io/inject: enabled
