core-bind9/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: bind9-loadbalancer
  namespace: bind9
  labels:
    app: bind9
    component: loadbalancer
  annotations:
    # F5 LoadBalancer annotations (if using F5 integration)
    f5.com/vs-name: "bind9-dns-vs"
    f5.com/partition: "/Common"
spec:
  type: LoadBalancer
  selector:
    app: bind9
  ports:
  - name: dns-udp
    port: 53
    targetPort: dns-udp
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: dns-tcp
    protocol: TCP
  # For F5 integration, you may want to add external IPs
  # externalIPs:
  # - <F5_VIP_IP>
